force-app/main/default/objects/Trigger_Configuration__mdt/Trigger_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>this will contain all the information needed for implementing the trigger framework</description>
    <label>Trigger Configuration</label>
    <pluralLabel>Trigger Configurations</pluralLabel>
</CustomObject>