force-app/main/default/objects/Trigger_Configuration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description of the business logic or the class. Add the Jira ticket number.</description>
    <inlineHelpText>Short description of the business logic or the class. Add the Jira ticket number.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>