force-app/main/default/objects/Trigger_Configuration__mdt/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>before</fullName>
            </value>
            <value>
                <fullName>after</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>