force-app/main/default/objects/Trigger_Configuration__mdt/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>delete</fullName>
            </value>
            <value>
                <fullName>insert</fullName>
            </value>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>