force-app/main/default/objects/Trigger_Configuration__mdt/fields/Implementing_Class__c.field-meta.xml
<CustomField>
    <fullName>Implementing_Class__c</fullName>
    <description>name of the class that will be used for this process</description>
    <inlineHelpText>name of the class that will be used for this process</inlineHelpText>
    <label>Implementing Class</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>