force-app/main/default/objects/Trigger_Configuration__mdt/fields/Order_of_Execution__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Execution__c</fullName>
    <label>Order of Execution</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>